# scibert-procodex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
docs/html/: index.html  scibert.html  search.js
docs/html/scibert/: config.html  features.html  inference.html  main.html  models.html  preprocessing.html  utils.html
docs/html/scibert/features/: build_features.html
docs/html/scibert/models/: dispatcher.html  network.html
docs/html/scibert/preprocessing/: make_data.html  utils.html
docs/html/scibert/utils/: decorators.html  logger.html  serializer.html
mlruns/0/: meta.yaml
mlruns/212662367550227535/: meta.yaml
mlruns/212662367550227535/eab25e02dc7f4657b575e9cac57688e3/: meta.yaml
mlruns/212662367550227535/eab25e02dc7f4657b575e9cac57688e3/metrics/: epoch  train_acc  train_loss  val_acc  val_loss
mlruns/212662367550227535/eab25e02dc7f4657b575e9cac57688e3/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/233715912172727996/: meta.yaml
mlruns/233715912172727996/0e3977157c3148bda18e0564f2ad514f/: meta.yaml
mlruns/759538358963451922/: meta.yaml
mlruns/759538358963451922/93e4656c082347f3b2e9d8d4194c373b/: meta.yaml
mlruns/759538358963451922/93e4656c082347f3b2e9d8d4194c373b/metrics/: epoch  (+4 more)
notebooks/: playground.ipynb
scibert/: config.py  inference.py  main.py  model.py  run.py
scibert/features/: build_features.py
scibert/models/: dispatcher.py  network.py
scibert/preprocessing/: make_data.py  utils.py
scibert/utils/: decorators.py  logger.py  serializer.py  utils.py
(+2 files in other folders)
