[tool.poetry]
name = "scibert-procodex"
version = "0.1.0"
description = ""
authors = ["kce3kor <kamal.shrestha@in.bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
