[tool.poetry]
name = "scibert-procodex"
version = "0.1.0"
description = ""
authors = ["kce3kor <kamal.shrestha@in.bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.25.2"
nltk = "^3.8.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
